erDiagram
    USERS {
        INT id PK
        VARCHAR username UK
        VARCHAR email UK
        VARCHAR password
        ENUM role
        INT points
    }

    TASKS {
        INT id PK
        VARCHAR title
        TEXT description
        VARCHAR pdf_path
        INT points
        DATETIME deadline
        INT created_by FK
        DATETIME created_at
        DATETIME updated_at
    }

    TASK_ASSIGNMENTS {
        INT id PK
        INT task_id FK
        INT student_id FK
        INT assigned_by FK
        DATETIME assigned_at
    }

    SUBMISSIONS {
        INT id PK
        INT task_id FK
        INT student_id FK
        DATETIME submitted_at
        TEXT text_content
        VARCHAR pdf_path
        TEXT teacher_comment
        INT awarded_points
        DATETIME awarded_at
    }

    REMINDER_LOGS {
        INT id PK
        INT task_id FK
        INT student_id FK
        ENUM reminder_type
        DATETIME sent_at
    }

    REWARDS {
        INT id PK
        VARCHAR title
        TEXT description
        INT cost
        INT created_by FK
        BOOLEAN active
        DATETIME created_at
        DATETIME updated_at
    }

    PURCHASES {
        INT id PK
        INT reward_id FK
        INT student_id FK
        DATETIME purchased_at
        INT cost_at_purchase
    }

    REWARD_PURCHASE_LEDGER {
        INT id PK
        INT purchase_id FK
        INT reward_id FK
        INT student_id FK
        VARCHAR reward_title
        TEXT reward_description
        INT reward_cost
        INT cost_at_purchase
        VARCHAR student_username
        VARCHAR student_email
        INT points_before
        INT points_after
        DATETIME purchased_at
        DATETIME created_at
    }

    REFRESH_TOKENS {
        INT id PK
        INT user_id FK
        CHAR token_hash UK
        DATETIME created_at
        DATETIME expires_at
        DATETIME revoked_at
        CHAR replaced_by
        VARCHAR created_by_ip
        VARCHAR created_by_user_agent
    }

    USERS ||--o{ TASKS : creates
    USERS ||--o{ TASK_ASSIGNMENTS : assigned_to
    USERS ||--o{ TASK_ASSIGNMENTS : assigned_by
    USERS ||--o{ SUBMISSIONS : submits
    USERS ||--o{ REMINDER_LOGS : receives
    USERS ||--o{ REWARDS : creates
    USERS ||--o{ PURCHASES : makes
    USERS ||--o{ REWARD_PURCHASE_LEDGER : recorded
    USERS ||--o{ REFRESH_TOKENS : issues

    TASKS ||--o{ TASK_ASSIGNMENTS : has
    TASKS ||--o{ SUBMISSIONS : receives
    TASKS ||--o{ REMINDER_LOGS : triggers

    REWARDS ||--o{ PURCHASES : bought
    REWARDS ||--o{ REWARD_PURCHASE_LEDGER : logged

    PURCHASES ||--o{ REWARD_PURCHASE_LEDGER : logged
